# WarpageDetection

./: README.md
CUDA_ICP/: object.pcd  object_dsp.pcd  scene_dsp.pcd  testcode
CUDA_ICP/src/: main.copy  main.cpp  scanmatch.cu  scanmatch.h
warp_detect/: CMakeLists.txt
warp_detect/data/: AW-1Z_without_noise_front.pcd  AW-2Z_without_noise_front.pcd
warp_detect/src/: gasd.cpp  gldetect.cpp  gldetect.hpp  lineseg2d.h  main.cpp  registration.cpp  registration.hpp  testicp.h  visualize.h  warpage.cpp  warpage.hpp
